# MRZvIS

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml
lab1/: binary_logic.py  conveyer.py  graphics.py  pipeline.py
lab2/: main.py
lab3/: data_utils.py  graphs.py  main.py  model.py  requirements.txt
lab4/: .gitignore  config.py  graphs.py  hamming_network.py  main.py  utils.py
lab5/: config.py  graphs.py  main.py  rnn.py  utils.py
