[project]
name = "mrzvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy==2.4.0",
    "pillow~=12.0.0",
    "tabulate>=0.9.0",
]

[tool.ruff]
# Увеличиваем лимит с 88 до 120
line-length = 120
target-version = "py313"

exclude = [
    ".venv",
    "dist",
    "build",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
# Если длинные строки в комментариях (заголовках) все равно мешают,
# можно отключить E501 полностью, раскомментировав строку ниже:
# ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["mrzvis"]
